[package]
name = "ssh-obi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/menhera-org/ssh-obi"
homepage = "https://obi.menhera.org"
readme = "README.md"
keywords = ["ssh", "terminal", "pty", "reconnect", "tmux"]
categories = ["command-line-utilities", "network-programming"]
description = "Lightweight per-user terminal multiplexer with auto-reconnecting sessions tunneled over plain SSH — preserves the local terminal's native scrollback (unlike mosh) and requires no system-wide daemon (unlike Eternal Terminal)."

[dependencies]
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nix = { version = "0.31", features = ["term", "signal", "process", "fs", "user"] }
serde = { version = "1", features = ["derive"] }
